Add slf4j as logging facade commons-logging is now excluded logback and jansi are added for test purpose only all System.out.print are replaced with regular LOG.debug statements all e.printStackTrace() are replaced with regular LOG.error statements Fixes #267